# ComfyUI_StableAvatar

./: README.md  StableAvatar_node.py  __init__.py  audio_extractor.py  inference.py  lip_mask_extractor.py  node_utils.py  pyproject.toml  requirements.txt  vocal_seperator.py
StableAvatar/: train_14B.py  train_1B_rec_vec.py  train_1B_square.py
StableAvatar/accelerate_config/: accelerate_config_machine_1B_multiple.yaml
StableAvatar/wan/dataset/: talking_video_dataset_fantasy.py
StableAvatar/wan/models/: attention_processor.py  cache_utils.py  motion_controller.py  motion_to_bucket.py  vocal_projector_fantasy.py  vocal_projector_fantasy_14B.py  vocal_projector_fantasy_1B.py  wan_fantasy_transformer3d_14B.py  wan_fantasy_transformer3d_1B.py  wav2vec.py
StableAvatar/wan/pipeline/: pipeline_wan_fun_inpaint.py  wan_inference_long_pipeline.py  wan_inference_pipeline_fantasy.py
StableAvatar/wan/utils/: color_correction.py  discrete_sampler.py  lora_utils.py  utils.py
example_workflows/: StableAvatar.json  avatar_1.json
